fix: Change by mnemonic fields for morphological relationships
